fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -206,8 +206,8 @@ a:focus {
 
 #headerwrap {
 	min-height: 350px;
-	padding-top: 75px;
-	padding-bottom: 0px;
+	padding-top: 50px;
+	padding-bottom: 20px;
 	text-align: center;
 }
 
@@ -239,7 +239,7 @@ a:focus {
 
 /* Portfolio Wrap */
 #portfoliowrap {
-	padding-top: 60px;
+	padding-top: 30px;
 	margin-bottom: 60px;
 	display: block;
 	text-align: center
